# PDEsolver

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes_library.py  routes_parse.py  routes_problems.py  routes_vision.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/export/: __init__.py
backend/app/parser/: __init__.py  latex_to_sympy.py  llm_classifier.py  natural_language.py
backend/app/schemas/: __init__.py  library.py  problem.py  solution.py  vision.py
backend/app/solver/: __init__.py  numerics.py  pipeline.py  verify.py
backend/app/solver/core/: classify.py  method_picker.py  step_builder.py  symbols.py
backend/app/solver/equations/: __init__.py  heat.py
backend/app/solver/methods/: base.py  biharmonic_beam.py  burgers.py  characteristics.py  dalembert.py  duhamel_heat.py  fourier_heat_line.py  general_second_order.py  green_1d.py  images_halfplane.py  laplace_heat_halfline.py  schrodinger_free.py  schrodinger_oscillator.py  schrodinger_well.py  separation_of_variables.py  sov_heat_disk.py  sov_helmholtz_rect.py  sov_laplace.py  sov_laplace_ball.py  sov_laplace_disk.py  sov_telegraph.py  sov_wave.py  sov_wave_disk.py  sov_wave_rect.py
backend/app/solver/pedagogy/: __init__.py  observations.py  templates.py
backend/app/vision/: __init__.py  claude_extractor.py  pipeline.py  preprocess.py
backend/tests/: conftest.py  test_api.py  test_library.py  test_plots.py
backend/tests/parser/: test_latex_to_sympy.py  test_llm_classifier.py  test_natural_language.py
backend/tests/solver/: test_biharmonic_beam.py  test_burgers.py  test_characteristics.py  test_dalembert.py  test_duhamel_heat.py  test_fourier_heat_line.py  test_general_second_order.py  test_green_1d.py  test_helmholtz.py  test_images_halfplane.py  test_laplace_heat_halfline.py  test_schrodinger_free.py  test_schrodinger_oscillator.py  test_schrodinger_well.py  test_separation_of_variables.py  test_sov_heat_disk.py  test_sov_laplace.py  test_sov_laplace_ball.py  test_sov_laplace_disk.py  test_sov_wave.py  test_sov_wave_disk.py  test_sov_wave_rect.py  test_telegraph.py
backend/tests/vision/: test_api.py  test_claude_extractor.py  test_preprocess.py
docker/: backend.Dockerfile  backend.prod.Dockerfile  frontend.prod.Dockerfile  vision.Dockerfile
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: solve.spec.ts
frontend/src/: App.tsx  main.tsx  test-setup.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DetailSlider.tsx  HeatPlot.tsx  ImageUpload.tsx  KatexBlock.tsx  LatexEditor.tsx  LoadingSpinner.tsx  Markdown.tsx  NaturalLanguageInput.tsx  StepCard.tsx
frontend/src/components/__tests__/: DetailSlider.test.tsx  KatexBlock.test.tsx  LoadingSpinner.test.tsx  StepCard.test.tsx
frontend/src/i18n/: messages.ts  useI18n.tsx
frontend/src/i18n/__tests__/: messages.test.ts  useI18n.test.tsx
frontend/src/pages/: Library.tsx  Solve.tsx
frontend/src/theme/: styles.css  useTheme.ts
